Cycles problem when running from multi-byte path #47856

Closed
opened 2016-03-20 17:05:18 +01:00 by Nemanja · 14 comments

System Information
Dell n5050 laptop
Win7 Ultimate
2GB RAM
dual core intel celeron 1.6
graphic intel hd 3000

Blender Version
Broken: 2.77
Past versioins worked well

i cannot enable cycles when i try see attached picture of problem.

Без наслова.png

**System Information** Dell n5050 laptop Win7 Ultimate 2GB RAM dual core intel celeron 1.6 graphic intel hd 3000 **Blender Version** Broken: 2.77 Past versioins worked well i cannot enable cycles when i try see attached picture of problem. ![Без наслова.png](https://archive.blender.org/developer/F297441/Без_наслова.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @cvex

Added subscriber: @cvex

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Cycles is enabled per default. Please try File -> Load Factory Settings and enable Cycles via the Info Header.

Cycles is enabled per default. Please try File -> Load Factory Settings and enable Cycles via the Info Header.
Author

It was enabled but it isn't in info header. And when i import project with cycles settings it just go on blender render there is no cycles.

It was enabled but it isn't in info header. And when i import project with cycles settings it just go on blender render there is no cycles.
Sergey Sharybin was assigned by Thomas Dinges 2016-03-20 19:51:24 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

@Sergey UTF8 failure maybe?

@Sergey UTF8 failure maybe?

Added subscriber: @sindra1961

Added subscriber: @sindra1961

Is it because mbcs is used not UTF8?
Is it a cause that file path is not encoded?

Is it because mbcs is used not UTF8? Is it a cause that file path is not encoded?
Author

Oh if you asking me i'm really not sure what you asking i don't really know much of programming so i really cant undrestand...

Oh if you asking me i'm really not sure what you asking i don't really know much of programming so i really cant undrestand...

Deveoper note:

While it looks like a regression, masqueraded issue was present in previous releases. It is caused by use of PyUnicode_EncodeFSDefault() to deal with file paths. While it worked fine for single-byte characters it fails for multi-byte ones. So old behavior was simply silent failure and unable of use of CUDA/OSL, new behavior is that Cycles fails to register at all (this seems to be related on internal check that built-in functions does not fail when running python bindings).

Not sure yet what would be the real solution here, but simple fix for upcoming 'a' release wuould be to call PyErr_Clear() if PyUnicode_EncodeFSDefault() fails.

Deveoper note: While it looks like a regression, masqueraded issue was present in previous releases. It is caused by use of `PyUnicode_EncodeFSDefault()` to deal with file paths. While it worked fine for single-byte characters it fails for multi-byte ones. So old behavior was simply silent failure and unable of use of CUDA/OSL, new behavior is that Cycles fails to register at all (this seems to be related on internal check that built-in functions does not fail when running python bindings). Not sure yet what would be the real solution here, but simple fix for upcoming 'a' release wuould be to call `PyErr_Clear()` if `PyUnicode_EncodeFSDefault()` fails.
Sergey Sharybin changed title from Cycles problem to Cycles problem when running from multi-byte path 2016-03-22 19:06:43 +01:00

This issue was referenced by 21f31e6054

This issue was referenced by 21f31e60546f1f882494bacb84adee92a53d734c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@fcc1a49f85

This issue was referenced by blender/cycles@fcc1a49f853c4f04dbbb62e45325f14a086ae122
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47856
No description provided.