intern/cycles/util/util_string.h
@@ -50,11 +50,16 @@ string string_from_bool(const bool var);
 /* Wide char strings are only used on Windows to deal with non-ascii
  * characters in file names and such. No reason to use such strings
  * for something else at this moment.
+ *
+ * Please note that strings are expected to be in UTF-8 codepage, and
+ * if ANSI is needed then explicit conversion required.
+ *
  */
 #ifdef _WIN32
 using std::wstring;
 wstring string_to_wstring(const string& path);
 string string_from_wstring(const wstring& path);
+string string_to_ansi(const string& str);
 #endif
 
 CCL_NAMESPACE_END
